--- a/public/apps/admin/index.html
+++ b/public/apps/admin/index.html
@@ -14,15 +14,15 @@
 		</style>
 	</head>
 	<body>
-		<script data-main="src/main.js" src="libs/require.js"></script>
+		<script data-main="/apps/admin/src/main.js" src="/apps/admin/libs/require.js"></script>
 		<script>
 			require.config({
 				urlArgs: (new Date()).getTime()
 			});
 			require({
 				paths: {
-					happy: "../../../happy",
-					plugins: "../libs/require/",
+					happy: "/happy",
+					plugins: "/apps/admin/libs/require/",
 				}
 			});
 		</script>
