--- a/public/admin/users/index.html
+++ b/public/admin/users/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Flavors</title>
+		<title>Users</title>
 		<style>
 			body{
 				position: fixed;
@@ -14,7 +14,7 @@
 		</style>
 	</head>
 	<body>
-		<script data-main="/admin/flavors/src/main.js" src="/admin/flavors/libs/require.js"></script>
+		<script data-main="/admin/users/src/main.js" src="/admin/users/libs/require.js"></script>
 		<script>
 			require.config({
 				urlArgs: (new Date()).getTime()
