--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -18,6 +18,9 @@
 					happy: "/happy"
 				}
 			});
+			window.onerror = function(message, url, linenumber) {
+				alert("JavaScript error: " + message + " on line " + linenumber + " for " + url);
+			}
 		</script>
 	</body>
 </html>
