--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -3,9 +3,10 @@
 	<head>
 		<title>Mytilus Edilus</title>
 		<link rel="stylesheet" href="/station/src/style.css">
-		<meta name="viewport" content="width=640px, user-scalable=no" />
+		<meta name="viewport" content="width=640px, initial-scale=.5, maximum-scale=.5" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />		
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<script data-main="/station/src/main.js" src="/station/libs/require.js"></script>
