./publish script commit

--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Mytilus Edilus</title>
 		<link rel="stylesheet" href="/station/src/style.css">
-		<meta name="viewport" content="width=device-width, user-scalable=no" />
+		<meta name="viewport" content="user-scalable=no" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />		
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
