--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Mytilus Edilus</title>
 		<link rel="stylesheet" href="/station/src/style.css">
-		<meta name="viewport" id="viewport" content="width=640" />
+		<meta name="viewport" id="viewport" content="width=640, user-scalable=no" />
 		<script>
 			if (screen.width > 740) {
 				var mvp = document.getElementById('viewport');
