--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -5,7 +5,9 @@
 		<link rel="stylesheet" href="/station/src/style.css">
 		<meta name="viewport" id="viewport" content="width=640, user-scalable=no" />
 		<script>
-			if (screen.width > 740) {
+		var is_uiwebview = /(iPhone|iPod|iPad).*AppleWebKit(?!.*Safari)/i.test(navigator.userAgent);
+
+			if (!is_uiwebview && screen.width > 740) {
 				var mvp = document.getElementById('viewport');
 				var mvps = window.innerWidth / screen.width
 				mvp.setAttribute('content','width=640, initial-scale='+mvps+', maximum-scale='+mvps);
