./publish script commit

--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -6,9 +6,11 @@
 		<meta name="viewport" id="viewport" content="width=640, user-scalable=no" />
 		<script>
 
+				if (navigator.platform.indexOf("iPad") == -1) {
 				var mvp = document.getElementById('viewport');
 				var mvps = window.innerWidth / screen.width
 				mvp.setAttribute('content','width=640, initial-scale='+mvps+', maximum-scale='+mvps);
+				}
 		
 		</script>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
