--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -6,11 +6,13 @@
 		<meta name="viewport" id="viewport" content="width=640, user-scalable=no" />
 		<script>
 
-				if (navigator.platform.indexOf("iPad") == -1) {
+			if (navigator.platform.indexOf("iPad") == -1 || 
+				navigator.platform.indexOf("iPhone") == -1 ||
+				navigator.platform.indexOf("iPod") == -1) {
 				var mvp = document.getElementById('viewport');
 				var mvps = window.innerWidth / screen.width
 				mvp.setAttribute('content','width=640, initial-scale='+mvps+', maximum-scale='+mvps);
-				}
+			}
 		
 		</script>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
