--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -3,17 +3,17 @@
 	<head>
 		<title>Mytilus Edilus</title>
 		<link rel="stylesheet" href="/station/src/style.css">
-		<meta name="viewport" id="viewport" content="width=640, user-scalable=no" />
+		<meta name="viewport" id="viewport" content="width=640" />
 		<script>
 		alert(navigator.platform);
 
-			//if (navigator.platform.indexOf("iPad") == -1 || 
-			//	navigator.platform.indexOf("iPhone") == -1 ||
-			//	navigator.platform.indexOf("iPod") == -1) {
+			if (navigator.platform.indexOf("iPad") == -1 || 
+				navigator.platform.indexOf("iPhone") == -1 ||
+				navigator.platform.indexOf("iPod") == -1) {
 				var mvp = document.getElementById('viewport');
-				var mvps = window.innerWidth / screen.width
+				var mvps = window.innerWidth / screen.width;
 				mvp.setAttribute('content','width=640, initial-scale='+mvps+', maximum-scale='+mvps);
-			//}
+			}
 		
 		</script>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
