--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Mytilus Edilus</title>
 		<link rel="stylesheet" href="/station/src/style.css">
-		<meta name="viewport" id="viewport" content="width=640" />
+		<meta name="viewport" id="viewport" content="width=640, user-scalable=no" />
 		<script>
 		
 
@@ -12,7 +12,7 @@
 				navigator.platform.indexOf("iPod") == -1) {
 				var mvp = document.getElementById('viewport');
 				var mvps = window.innerWidth / screen.width;
-				mvp.setAttribute('content','width=640, initial-scale='+mvps+', maximum-scale='+mvps);
+				//mvp.setAttribute('content','width=640, initial-scale='+mvps+', maximum-scale='+mvps);
 			}
 		
 		</script>
