./publish script commit

--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -10,9 +10,9 @@
 			//if (navigator.platform.indexOf("iPad") == -1 || 
 			//	navigator.platform.indexOf("iPhone") == -1 ||
 			//	navigator.platform.indexOf("iPod") == -1) {
-				var mvp = document.getElementById('viewport');
-				var mvps = window.innerWidth / screen.width;
-				mvp.setAttribute('content','width=640, initial-scale=0.5, maximum-scale=0.5');
+				//var mvp = document.getElementById('viewport');
+				//var mvps = window.innerWidth / screen.width;
+				//mvp.setAttribute('content','width=640, initial-scale=0.5, maximum-scale=0.5');
 			//}
 		
 		</script>
