--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -3,17 +3,24 @@
 	<head>
 		<title>Mytilus Edilus</title>
 		<link rel="stylesheet" href="/station/src/style.css">
-		<meta name="viewport" id="viewport" content="width=640, initial-scale=0.5, maximum-scale=0.5" />
 		<script>
 		
+			var meta = document.createElement('meta');
 
-			//if (navigator.platform.indexOf("iPad") == -1 || 
-			//	navigator.platform.indexOf("iPhone") == -1 ||
-			//	navigator.platform.indexOf("iPod") == -1) {
-				//var mvp = document.getElementById('viewport');
-				//var mvps = window.innerWidth / screen.width;
-				//mvp.setAttribute('content','width=640, initial-scale=0.5, maximum-scale=0.5');
-			//}
+			if (navigator.platform.indexOf("iPad") !== -1 || 
+				navigator.platform.indexOf("iPhone") !== -1 ||
+				navigator.platform.indexOf("iPod") !== -1) {
+				meta.setAttribute('content', 'width=640, user-scalable=no');	
+			}
+			else{
+				var mvps = window.innerWidth / screen.width;
+				meta.setAttribute('content', 'width=640,  initial-scale=0.5, maximum-scale=0.5');
+				
+				console.log('width=640, initial-scale='+mvps+', maximum-scale='+mvps)
+				//mvp.setAttribute('content','width=640, initial-scale='+mvps+', maximum-scale='+mvps);
+			}
+			document.getElementsByTagName('head')[0].appendChild(meta);
+
 		
 		</script>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
