--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -11,7 +11,7 @@
 				navigator.platform.indexOf("iPhone") !== -1 ||
 				navigator.platform.indexOf("iPod") !== -1) {
 				console.log('we')
-				meta.setAttribute('content', 'width=640, user-scalable=no');	
+				meta.setAttribute('content', 'width=device-width, user-scalable=no');	
 			}
 			else{
 				var mvps = window.innerWidth / screen.width;
