--- a/public/station/dev.html
+++ b/public/station/dev.html
@@ -10,13 +10,13 @@
 			if (navigator.platform.indexOf("iPad") !== -1 || 
 				navigator.platform.indexOf("iPhone") !== -1 ||
 				navigator.platform.indexOf("iPod") !== -1) {
-				console.log('we')
-				meta.setAttribute('content', 'width=device-width, user-scalable=no');	
+				meta.setAttribute('content', 'user-scalable=no');	
 			}
 			else{
 				var mvps = window.innerWidth / screen.width;
 				meta.setAttribute('content', 'width=640, initial-scale='+mvps+', maximum-scale='+mvps);
 			}
+			console.log(meta.content);
 			document.getElementsByTagName('head')[0].appendChild(meta);
 		
 		</script>
