--- a/public/station-scale/index.html
+++ b/public/station-scale/index.html
@@ -6,12 +6,12 @@
 				navigator.platform.indexOf("iPhone") !== -1 ||
 				navigator.platform.indexOf("iPod") !== -1) {
 				meta.setAttribute('content', 'user-scalable=no');
-				window.location = '/station-scale';
+				window.location = '/station';
 			}		
 		</script>
-		<title>Mytilus Edilis</title>
+		<title>Mytilus Edulis</title>
 		<link rel="stylesheet" href="/station/dist/style.css">
-		<meta name="viewport" content="width=640px, user-scalabe=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=.5" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />	
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>	
