--- a/public/station-scale/index.html
+++ b/public/station-scale/index.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<script>
-			if (navigator.platform.indexOf("iPad") === -1 || 
-				navigator.platform.indexOf("iPhone") === -1 ||
-				navigator.platform.indexOf("iPod") === -1) {
-				window.location = '/station-scale/';
+			if (navigator.platform.indexOf("iPad") !== -1 || 
+				navigator.platform.indexOf("iPhone") !== -1 ||
+				navigator.platform.indexOf("iPod") !== -1) {
+				window.location = '/station/';
 			}		
 		</script>
-		<title>Mytilus Edilis</title>
+		<title>Mytilus Edulis</title>
 		<link rel="stylesheet" href="/station/dist/style.css">
-		<meta name="viewport" content="width=640, user-scalable=no" />
+		<meta name="viewport" content="width=640, initial-scale=.5, maximum-scale=.5" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />	
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>	
