./publish script commit

--- a/public/station/index.html
+++ b/public/station/index.html
@@ -2,11 +2,10 @@
 <html>
 	<head>
 		<script>
-		alert(navigator.platform + navigator.platform.indexOf("iPad"))
-			if (navigator.platform.indexOf("iPad") === -1 || 
-				navigator.platform.indexOf("iPhone") === -1 ||
+			if (navigator.platform.indexOf("iPad") === -1 && 
+				navigator.platform.indexOf("iPhone") === -1 &&
 				navigator.platform.indexOf("iPod") === -1) {
-				//window.location = '/station-scale/';
+				window.location = '/station-scale/';
 			}		
 		</script>
 		<title>Mytilus Edilis</title>
