--- a/public/station-scale/index.html
+++ b/public/station-scale/index.html
@@ -13,7 +13,8 @@
 		<meta name="viewport" content="width=640, initial-scale=.5, maximum-scale=.5" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />	
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>	
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="/station/dist/jquery.min.js"><\/script>')</script>	
 	</head>
 	<body>
 		<script data-main="/station/dist/main.js" src="/station/libs/require.js"></script>
